@@ -103,6 +103,10 @@ void connection::start()
 
 void connection::stop()
 {
+	// Initiate graceful connection closure.
+	boost::system::error_code ignored_ec;
+	socket().shutdown(boost::asio::ip::tcp::socket::shutdown_both, ignored_ec); // @note For portable behaviour with respect to graceful closure of a
+																				// connected socket, call shutdown() before closing the socket.
 	socket().close();
 }
 
@@ -240,11 +244,7 @@ void connection::handle_write(const boost::system::error_code& error)
 		if (keepalive_) {
 			// if a keep-alive connection is requested, we read the next request
 			read_more();
-		}
-		else {
-			// Initiate graceful connection closure.
-			boost::system::error_code ignored_ec;
-			socket().shutdown(boost::asio::ip::tcp::socket::shutdown_both, ignored_ec);
+		} else {
 			connection_manager_.stop(shared_from_this());
 		}
 	}
